--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Managing your finaces using Python\n",
     "\n",
@@ -11,18 +15,199 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Intro to beancount ~2 min\n",
+    "# Beancount Features\n",
     "\n",
-    "* Explain plaintext accounting\n",
-    "* Explain double entry accounting\n",
-    "* brief design goals of beancount\n"
+    "* plaintext accounting\n",
+    "* double-entry accounting\n",
+    "* Reports\n",
+    "* cli and python api\n",
+    "* Investment support\n",
+    "* Plugin architecture"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;txn&nbsp;&nbsp;&nbsp;&nbsp;\"Coffee House\"\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Liabilities:Credit-Card&nbsp;&nbsp;&nbsp;&nbsp;-5.15 USD\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "<span style=\"color:blue\">**2020-07-25**</span>&nbsp;&nbsp;&nbsp;&nbsp;txn&nbsp;&nbsp;&nbsp;&nbsp;\"Coffee House\"\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Liabilities:Credit-Card&nbsp;&nbsp;&nbsp;&nbsp;-5.15 USD\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n",
+    "\n",
+    "____\n",
+    "\n",
+    "Date in ISO format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:blue\">**txn**</span>&nbsp;&nbsp;&nbsp;&nbsp;\"Coffee House\"\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Liabilities:Credit-Card&nbsp;&nbsp;&nbsp;&nbsp;-5.15 USD\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n",
+    "\n",
+    "___\n",
+    "\n",
+    "Flag\n",
+    "\n",
+    "- txn - transaction\n",
+    "- \\* - cleared\n",
+    "- ! - pending"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;txn&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:blue\">**\"Coffee House\"**</span>\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Liabilities:Credit-Card&nbsp;&nbsp;&nbsp;&nbsp;-5.15 USD\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n",
+    "___\n",
+    "\n",
+    "Payee String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;txn&nbsp;&nbsp;&nbsp;&nbsp;\"Coffee House\"\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:blue\">**Liabilities:Credit-Card**</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-5.15 USD\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n",
+    "___\n",
+    "Account (must start with one of the following)\n",
+    "* Assets\n",
+    "* Liabilities\n",
+    "* Income\n",
+    "* Expense\n",
+    "* Equity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Transaction\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;txn&nbsp;&nbsp;&nbsp;&nbsp;\"Coffee House\"\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Liabilities:Credit-Card&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:blue\">**-5.15 USD**</span>\n",
+    "    \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Expenses:Coffee\n",
+    "\n",
+    "Amount of credit/debit with currency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Directive\n",
+    "\n",
+    "\n",
+    "2020-07-25&nbsp;&nbsp;&nbsp;&nbsp;balance&nbsp;&nbsp;&nbsp;&nbsp;Assets:Checking&nbsp;&nbsp;&nbsp;&nbsp;1000.00 USD\n",
+    "   ___\n",
+    "   \n",
+    "   Input to specify Metadata and Options\n",
+    "   \n",
+    "   * open/close\n",
+    "   * balance\n",
+    "   * note\n",
+    "   * event\n",
+    "   * option"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import beancount\n",
+    "\n",
+    "# load source file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Beancount Query Language ~1 min\n",
     "\n",
@@ -31,7 +216,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Fava ~1 min\n",
     "\n",
@@ -43,17 +232,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## End ~30 sec\n",
+    "# Resources\n",
     "\n",
-    "* [Beancount Git Repo](https://github.com/beancount/beancount)\n",
-    "* [Fava Git Repo](https://github.com/beancount/fava)\n",
-    "* [Fava Envelope Plugin](https://github.com/bryall/fava-envelope)"
+    "* Beancount Github Repo [https://github.com/beancount/beancount](https://github.com/beancount/beancount)\n",
+    "* Fava Github Repo [https://github.com/beancount/fava](https://github.com/beancount/fava)\n",
+    "\n",
+    "## Plugging some projects I am working on \n",
+    "* Beancount/Fava Envelope Budget Plugin [https://github.com/bryall/fava-envelope](https://github.com/bryall/fava-envelope)\n",
+    "* Beancount Language Server Protocol(LSP) [https://github.com/bryall/beancount-language-server](https://github.com/bryall/beancount-language-server)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Where you can find me\n",
+    "\n",
+    "## twitter: polarmutex\n",
+    "## email: ?"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -64,12 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1594090537961",
-   "display_name": "Python 3.7.3 64-bit"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
