added some notes

--- a/index.ipynb
+++ b/index.ipynb
@@ -1268,6 +1268,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "you could just loop over entries, or ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -2181,6 +2192,19 @@
     "\"\"\"\n",
     "rtypes, rrows = query.run_query(entries,options_map,query_str)\n",
     "rrows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "all the features build up to feature that draws people to beancount, fava\n",
+    "\n",
+    "fava uses all these queries and processing of the data to show it visually"
    ]
   },
   {
