--- a/index.ipynb
+++ b/index.ipynb
@@ -10,22 +10,57 @@
    "source": [
     "# Managing your finaces using Python\n",
     "\n",
-    "## with beancount and fava"
+    "## with beancount and fava\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "#### Brian Ryall\n",
+    "#### @polarmutex"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "what is it?\n",
-    "\n",
-    "explain my backstory\n",
-    "I have tried using Quicken, YNAB, and Spreasheets\n",
-    "With all these I always run into pain points that I have no control to change"
+    "# Backstory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Microsoft_Excel_2013_logo.svg/1200px-Microsoft_Excel_2013_logo.svg.png\" width=\"100\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://cdn.mos.cms.futurecdn.net/HCHyG47mRCD6By9Hthwsx4-1200-80.jpg\" width=\"200\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    " ![](https://upload.wikimedia.org/wikipedia/commons/d/d4/YNAB_logo.svg)"
    ]
   },
   {
@@ -49,7 +84,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "# Installation\n",
     "```bash\n",
@@ -66,7 +105,9 @@
     }
    },
    "source": [
-    "# Source File"
+    "# Source File\n",
+    "\n",
+    "<img src=\"source-file.png\" width=\"1000\">"
    ]
   },
   {
@@ -237,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1250,7 +1291,7 @@
        " ...]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,14 +1306,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('19611.20')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "you could just loop over entries, or ..."
+    "from beancount.core.data import filter_txns\n",
+    "\n",
+    "# Now we can just loop over the transactions and do the processing we want ...\n",
+    "\n",
+    "sum = 0\n",
+    "for entry in filter_txns(entries):\n",
+    "    for posting in entry.postings:\n",
+    "        if \"Food\" in posting.account:\n",
+    "            # As long as same curreny, API exists to convert\n",
+    "            sum += posting.units[0]\n",
+    "sum"
    ]
   },
   {
@@ -2198,19 +2262,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "all the features build up to feature that draws people to beancount, fava\n",
-    "\n",
-    "fava uses all these queries and processing of the data to show it visually"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -2221,6 +2272,19 @@
     "* show Balance\n",
     "* mention Journal and Query\n",
     "* show Commodities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "all the features build up to feature that draws people to beancount, fava\n",
+    "\n",
+    "fava uses all these queries and processing of the data to show it visually"
    ]
   },
   {
@@ -2242,20 +2306,6 @@
     "## Plugging some projects I am working on \n",
     "* Beancount/Fava Envelope Budget Plugin [https://github.com/bryall/fava-envelope](https://github.com/bryall/fava-envelope)\n",
     "* Beancount Language Server Protocol(LSP) [https://github.com/bryall/beancount-language-server](https://github.com/bryall/beancount-language-server)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Where you can find me\n",
-    "\n",
-    "## twitter: polarmutex\n",
-    "## email: ?"
    ]
   }
  ],
