--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1291,7 +1291,7 @@
        " ...]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1320,7 +1320,7 @@
        "Decimal('19611.20')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
     "for entry in filter_txns(entries):\n",
     "    for posting in entry.postings:\n",
     "        if \"Food\" in posting.account:\n",
-    "            # As long as same curreny, API exists to convert\n",
+    "            # As long as same currency, API exists to convert\n",
     "            sum += posting.units[0]\n",
     "sum"
    ]
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1668,7 +1668,7 @@
        " ResultRow(date=datetime.date(2015, 12, 17), account='Assets:US:BofA:Checking', position=2832.14 USD, balance=(3043.23 USD))]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1731,7 +1731,7 @@
        " ResultRow(account='Expenses:Taxes:Y2013:US:SDI', total=(3.36 USD), month=1)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2236,7 +2236,7 @@
        " ResultRow(year=2014, month=12, account='Expenses:Transport:Tram', sum_position=(120.00 USD))]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,29 +2262,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "## Fava ~1 min\n",
-    "\n",
-    "* show Income Statement\n",
-    "* show Balance\n",
-    "* mention Journal and Query\n",
-    "* show Commodities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "all the features build up to feature that draws people to beancount, fava\n",
-    "\n",
-    "fava uses all these queries and processing of the data to show it visually"
+    "# Fava"
    ]
   },
   {
