--- a/index.ipynb
+++ b/index.ipynb
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1320,16 +1320,19 @@
        "Decimal('19611.20')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from beancount.core.data import filter_txns\n",
+    "from beancount import loader\n",
+    "\n",
+    "filename = \"example.beancount\"\n",
+    "entries, errors, options_map = loader.load_file(filename)\n",
     "\n",
     "# Now we can just loop over the transactions and do the processing we want ...\n",
-    "\n",
     "sum = 0\n",
     "for entry in filter_txns(entries):\n",
     "    for posting in entry.postings:\n",
