--- a/index.ipynb
+++ b/index.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Managing your finaces using Python\n",
+    "# Managing your finances using Python\n",
     "\n",
     "## with beancount and fava\n",
     "\n",
